# Emotion-detection-

./: .gitignore  README.md  cnnTrain.py  integration_app.py  preprocess.py  pyproject.toml  req.txt  textPreprocess.py  textTester.py  textTrain.py  videoTester.py
.devcontainer/: devcontainer.json
